# weather-dashboard

./: .env-template  .flake8  .gitignore  .pre-commit-config.yaml  CI_CD_ENVIRONMENT_SETUP.md  CI_CD_GUIDE.md  CLI_REFERENCE.md  DOCKER_DESKTOP.md  Dockerfile  Dockerfile.web  KUBERNETES_DEPLOYMENT.md  Makefile  POSTGRES_SETUP.md  README.md  api.py  app.py  cli.py  display.py  docker-compose.yml  emoji.py  emojis.py  exceptions.py  homepage.html  init_database.py  location.py  location_manager.py  main.py  pyproject.toml  pytest.ini  run-local.sh  run_flask.py  run_flask1.sh  run_successful_unit_tests.py  run_web.py  setup.py  setup.sh  status_code.py  test_web_ui.py  tests_emoji.py  user_input.py  (+2 more)
.github/workflows/: branch-protection.yml  ci-dev.yml  ci-prod.yml  publish.yml
.uv/: publish.toml
Experimental/: cleaner_main.py  error_http.py  flask_http_error.py  how_to_convert_to_typer.md  typer_weather_app.py
cli_tests/: migrate_database.py  test_app.py  test_database.py  test_web_forms.py
database/: DATABASE_ARCHITECTURE.md  README.md  migrate_database.py  test_postgres_setup.py
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml
scripts/: build-and-deploy.sh
tests/: How To.md  __init__.py  conftest.py  test_api.py  test_app.py  test_db.py  test_flattened_location.py  test_location_manager.py  test_repository.py  tests_emoji.py
tests/cli_tests/: README.md  test_app.py  test_repository.py  test_web_helpers.py
tests/functional/: README.md  test_app_health.py  test_runner_functional.py
tests/functional/cli/: __init__.py  conftest.py  test_all_commands.py  test_error_handling.py  test_interactive_mode.py  test_location_commands.py  test_performance.py  test_weather_commands.py
tests/functional/web/: conftest.py  pytest.ini  test_api_endpoints.py  test_app_health.py  test_error_handling.py  test_forecast.py  test_form_interactions.py  test_index.py  test_performance.py  test_runner.py  test_search.py  test_weather.py
tests/integration/: __init__.py  conftest.py
tests/integration/cli/: __init__.py  test_cli_database_integration.py  test_cli_integration.py
tests/integration/web/: __init__.py  test_web_integration.py  test_web_nl_integration.py  test_web_security_integration.py
tests/unit/: README.md
tests/unit/cli/: conftest.py  test_api.py  test_app.py  test_cli_commands.py  test_current.py  test_database.py  test_location_manager.py  test_repository.py  tests_emoji.py
tests/unit/web/: REFACTORING_REPORT.md  TEST_STATUS_REPORT.md  conftest.py  test_basic_flask.py  test_flask_routes.py  test_flask_routes_working.py  test_location_selection.py  test_natural_language.py  test_simple_routes.py  test_utils.py  test_web_forms.py  test_web_helpers.py
tests/web_tests/functional/: test_constants.py  test_search.py
weather_app/: __init__.py  __main__.py  api.py  app.py  cli.py  cli_app.py  config.py  current.py  database.py  display.py  display_types.py  emoji.py  exceptions.py  forecast.py  location.py  migrate_database.py  models.py  repository.py  schema.py  user_input.py  weather_types.py
web/: __init__.py  __main__.py  app.py  error_handlers.py  flask_runner.py  forms.py  helpers.py  logging_config.py  utils.py
web/static/css/: style.css  styles.css
web/templates/: base.html  date_weather.html  date_weather_form.html  disambiguate_location.html  forecast.html  index.html  location_selection.html  nl_date_weather_form.html  nl_date_weather_result.html  results.html  results_date_weather.html  search_results.html  weather.html
web_tests/: DUPLICATES_TO_FIX.md  README.md  conftest.py  test_date_weather.py  test_final_ui.py  test_forecast.py  test_homepage.py  test_index.py  test_integration.py  test_nl_weather.py  test_runner.py  test_search.py  test_search_forecast.py  test_weather.py  test_web_ui.py  test_web_ui_clean.py
