[project]
name = "weather_app"
version = "0.1.0"
description = "Weather dashboard application with SQLite database storage"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "ruff>=0.11.8",
    "typer>=0.15.3",
    "sqlmodel>=0.0.8",
    "rich>=13.7.0", # For improved CLI display
    "psycopg2-binary>=2.9.10",
    "python-decouple>=3.8",
    "flask>=2.3.3", # Flask web framework
    "flask-wtf>=1.2.1", # Flask form handling
    "python-dateutil>=2.9.0.post0",
]

[project.scripts]
weather-dashboard = "weather_app.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "B", "I"]
ignore = ["E203", "E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
