[project]
name = "weather_app"
version = "0.1.0"
description = "Weather dashboard application with SQLite database storage"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "ruff>=0.11.8",
    "typer>=0.15.3",
    "sqlmodel>=0.0.8",
    "rich>=13.7.0", # For improved CLI display
    "psycopg2-binary>=2.9.10",
    "python-decouple>=3.8", # Flask web framework
    "flask-wtf>=1.2.1", # Flask form handling
    "flask>=3.1.0",
    "playwright>=1.52.0",
    "pytest-playwright>=0.7.0",
    "python-dateutil>=2.9.0.post0",
    "make>=0.1.6.post2",
    "flake8>=7.2.0",
    "black>=25.1.0",
    "isort>=6.0.1",
]

[project.scripts]
weather-dashboard = "weather_app.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-playwright>=0.7.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "B", "I"]
ignore = ["E203", "E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    ".mypy_cache",
    ".pytest_cache"
]
