[project]
name = "weather_app"
version = "0.1.0"
description = "Weather dashboard application with SQLite database storage"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "ruff>=0.11.8",
    "flake8>=7.2.0",
    "typer>=0.15.3",
    "sqlmodel>=0.0.8",
    "rich>=13.7.0", # For improved CLI display
    "psycopg2-binary>=2.9.10",
    "python-decouple>=3.8", # Flask web framework
    "flask-wtf>=1.2.1", # Flask form handling
    "flask>=3.1.0",
    "playwright>=1.52.0",
    "pytest-playwright>=0.7.0",
    "python-dateutil>=2.9.0.post0",
    "make>=0.1.6.post2",
]

[project.scripts]
weather-dashboard = "weather_app.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-playwright>=0.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["weather_app"]

[tool.hatch.build]
only-packages = true
exclude = [
    "web/*",
    "tests/*",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E203", # whitespace before ':'
    "E501", # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.hatch.publish]
index-name = "testpypi"
directory = "dist"

[tool.hatch.publish.auth]
testpypi = { username = "__token__", password = "${{ secrets.PYPI_SECRET }}" }

[tool.hatch.envs.publish]
dependencies = [
    "hatch",
]

[tool.hatch.publish.trusted-publishers]
github = [
    { owner = "yourusername", repository = "weather-dashboard", workflow = "publish", environment = "release" }
]
